--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
+    "type": "module",
     "name": "if",
     "version": "1.0.0",
     "description": "",
-    "main": "main.js",
+    "main": "src/scripts/main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "husky install",
-        "lint": "prettier --write . && eslint main.js",
-        "scriptname": "cmd"
+        "lint": "prettier --write . && eslint src/scripts/main.js"
     },
     "repository": {
         "type": "git",
@@ -21,12 +20,16 @@
     },
     "homepage": "https://github.com/LizavetBa/if-js#readme",
     "devDependencies": {
+        "@babel/core": "^7.19.6",
+        "@babel/preset-env": "^7.19.4",
+        "babel-jest": "^29.2.2",
         "eslint": "8.22.0",
         "husky": "8.0.1",
-        "jest": "^29.2.1",
+        "jest-environment-jsdom": "^29.3.1",
         "prettier": "2.7.1"
     },
     "dependencies": {
-        "save-dev": "^0.0.1-security"
+        "save-dev": "^0.0.1-security",
+        "src": "^1.1.2"
     }
 }
